feat: Implement Climate System and Optimize Engine for Extreme Scale
- Added ClimateService managing seasons and temperature.
- Integrated temperature into Biomass growth and Animal metabolism.
- Optimized EntityContainer memory usage (ArrayList buckets, removed redundant indices).
- Reduced memory footprint of ArrayComponentStore and Organism (minimized locking).
- Improved world initialization performance by disabling events during population.
- Fixed partitioning bottleneck in NaturePlugin.
- Updated documentation and benchmark suite.